--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,111 @@
+aiobotocore==2.12.3
 aiohttp==3.9.5
+aioitertools==0.11.0
 aiosignal==1.3.1
+anyio==4.3.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
+astor==0.8.1
+async-timeout==4.0.3
 asyncio==3.4.3
+attrdict==2.0.1
 attrs==23.2.0
+Babel==2.15.0
+bce-python-sdk==0.9.7
+beautifulsoup4==4.12.3
+blinker==1.8.1
+botocore==1.34.69
+cachetools==5.3.3
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+contourpy==1.2.1
+cramjam==2.8.3
+cssselect==1.2.0
+cssutils==2.10.2
+cycler==0.12.1
+Cython==3.0.10
+decorator==5.1.1
 disutils==1.4.32.post2
+et-xmlfile==1.1.0
+exceptiongroup==1.2.1
+fastparquet==2024.2.0
+fire==0.6.0
+Flask==3.0.3
+flask-babel==4.0.0
+fonttools==4.51.0
 frozenlist==1.4.1
+fsspec==2024.3.1
+future==1.0.0
 fuzzywuzzy==0.18.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
+imageio==2.34.1
+imgaug==0.4.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jmespath==1.0.1
+kiwisolver==1.4.5
+lazy_loader==0.4
+lmdb==1.4.1
+lxml==5.2.1
+MarkupSafe==2.1.5
+matplotlib==3.8.4
 minio==7.2.5
 multidict==6.0.5
+networkx==3.3
 numpy==1.26.4
-opencv-python==4.9.0.80
-paddleocr==2.0.1
+opencv-contrib-python==4.6.0.66
+opencv-python==4.6.0.66
+opencv-python-headless==4.9.0.80
+openpyxl==3.1.2
+opt-einsum==3.3.0
+packaging==24.0
+paddleocr==2.7.3
+paddlepaddle==2.6.1
 pandas==2.2.2
 patch-ng==1.17.4
+pdf2docx==0.5.8
 pillow==10.3.0
+premailer==3.10.0
+protobuf==3.20.2
+psutil==5.9.8
 psycopg2==2.9.9
+pyarrow==16.0.0
+pyclipper==1.3.0.post5
 pycparser==2.22
 pycryptodome==3.20.0
+PyMuPDF==1.24.2
+PyMuPDFb==1.24.1
+pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==6.0.1
+rapidfuzz==3.9.0
+rarfile==4.2
 requests==2.31.0
-setuptools==69.5.1
+s3fs==2024.3.1
+scikit-image==0.23.2
+scipy==1.13.0
+shapely==2.0.4
 six==1.16.0
+sniffio==1.3.1
+soupsieve==2.5
+termcolor==2.4.0
+tifffile==2024.5.3
+tqdm==4.66.4
 trino==0.328.0
 typing_extensions==4.11.0
 tzdata==2024.1
 tzlocal==5.2
 urllib3==2.2.1
+visualdl==2.5.3
+Werkzeug==3.0.3
+wrapt==1.16.0
 yarl==1.9.4
